[gd_scene load_steps=14 format=3 uid="uid://wbhlmofkyins"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_0etix"]
[ext_resource type="PackedScene" uid="uid://fichfmcl1hc7" path="res://scenes/background.tscn" id="2_lvgsd"]
[ext_resource type="PackedScene" uid="uid://dk8l4eq4xaixu" path="res://scenes/level_2.tscn" id="2_mi313"]
[ext_resource type="PackedScene" uid="uid://bkt4rx3stgj7d" path="res://scenes/player.tscn" id="2_rq647"]
[ext_resource type="AudioStream" uid="uid://dri4necwnayjh" path="res://assets/audio/stage_music.mp3" id="4_15cp6"]
[ext_resource type="PackedScene" uid="uid://cuih8dx70ykm4" path="res://scenes/saw.tscn" id="5_2d52e"]
[ext_resource type="PackedScene" uid="uid://bt6kre8fgx86a" path="res://scenes/jump_pad.tscn" id="5_ymkqx"]
[ext_resource type="PackedScene" uid="uid://2njgkefygfw4" path="res://scenes/spike_ball.tscn" id="6_tvc5m"]
[ext_resource type="PackedScene" uid="uid://cfbk3vd2viw4o" path="res://scenes/tile_map.tscn" id="9_j0l3n"]
[ext_resource type="PackedScene" uid="uid://d2pvwojxxmre6" path="res://scenes/start_area.tscn" id="9_yx5ex"]
[ext_resource type="PackedScene" uid="uid://cvcaco0f0aw82" path="res://scenes/exit.tscn" id="10_7gdqb"]
[ext_resource type="AudioStream" uid="uid://hsswmnwulca2" path="res://assets/audio/stage_clear.mp3" id="11_rc3em"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdcvo"]
size = Vector2(908, 26)

[node name="Level" type="Node2D"]
script = ExtResource("1_0etix")
next_level = ExtResource("2_mi313")

[node name="Player" parent="." instance=ExtResource("2_rq647")]
top_level = true
position = Vector2(97, 188)

[node name="StageMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_15cp6")

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(100, 320)
scale = Vector2(2.72, 1)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(157, 17)
shape = SubResource("RectangleShape2D_rdcvo")

[node name="Traps" type="Node2D" parent="."]

[node name="Saw" parent="Traps" instance=ExtResource("5_2d52e")]
position = Vector2(393, 197)

[node name="Saw2" parent="Traps" instance=ExtResource("5_2d52e")]
position = Vector2(318, 197)

[node name="Saw3" parent="Traps" instance=ExtResource("5_2d52e")]
position = Vector2(245, 197)

[node name="SpikeBall" parent="Traps" instance=ExtResource("6_tvc5m")]
position = Vector2(513, 211)

[node name="SpikeBall2" parent="Traps" instance=ExtResource("6_tvc5m")]
position = Vector2(616, 211)

[node name="SpikeBall3" parent="Traps" instance=ExtResource("6_tvc5m")]
position = Vector2(709, 211)

[node name="Objects" type="Node2D" parent="."]

[node name="JumpPad" parent="Objects" instance=ExtResource("5_ymkqx")]
position = Vector2(898, 210)

[node name="TileMap" parent="." instance=ExtResource("9_j0l3n")]
layer_0/tile_data = PackedInt32Array(655368, 1114112, 1, 655369, 1114112, 1, 655370, 1114112, 1, 655371, 1114112, 1, 655372, 1114112, 1, 851973, 458752, 8, 851974, 458752, 8, 851975, 458752, 8, 851976, 458752, 8, 851977, 458752, 8, 851978, 458752, 8, 851979, 458752, 8, 851980, 458752, 8, 851981, 458752, 8, 851982, 458752, 8, 851983, 458752, 8, 851984, 458752, 8, 851985, 458752, 8, 851986, 458752, 8, 851987, 458752, 8, 851988, 458752, 8, 851989, 458752, 8, 851990, 458752, 8, 851991, 458752, 8, 851992, 458752, 8, 851993, 458752, 8, 851994, 458752, 8, 917509, 458752, 9, 917510, 458752, 9, 917511, 458752, 9, 917512, 458752, 9, 917513, 458752, 9, 917514, 458752, 9, 917515, 458752, 9, 917516, 458752, 9, 917517, 458752, 9, 917518, 458752, 9, 917519, 458752, 9, 917520, 458752, 9, 917521, 458752, 9, 917522, 458752, 9, 917523, 458752, 9, 917524, 458752, 9, 917525, 458752, 9, 917526, 458752, 9, 917527, 458752, 9, 917528, 458752, 9, 917529, 458752, 9, 917530, 458752, 9, 983045, 458752, 9, 983046, 458752, 9, 983047, 458752, 9, 983048, 458752, 9, 983049, 458752, 9, 983050, 458752, 9, 983051, 458752, 9, 983052, 458752, 9, 983053, 458752, 9, 983054, 458752, 9, 983055, 458752, 9, 983056, 458752, 9, 983057, 458752, 9, 983058, 458752, 9, 983059, 458752, 9, 983060, 458752, 9, 983061, 458752, 9, 983062, 458752, 9, 983063, 458752, 9, 983064, 458752, 9, 983065, 458752, 9, 983066, 458752, 9, 1048581, 458752, 9, 1048582, 458752, 9, 1048583, 458752, 9, 1048584, 458752, 9, 1048585, 458752, 9, 1048586, 458752, 9, 1048587, 458752, 9, 1048588, 458752, 9, 1048589, 458752, 9, 1048590, 458752, 9, 1048591, 458752, 9, 1048592, 458752, 9, 1048593, 458752, 9, 1048594, 458752, 9, 1048595, 458752, 9, 1048596, 458752, 9, 1048597, 458752, 9, 1048598, 458752, 9, 1048599, 458752, 9, 1048600, 458752, 9, 1048601, 458752, 9, 1048602, 458752, 9, 1114117, 458752, 9, 1114118, 458752, 9, 1114119, 458752, 9, 1114120, 458752, 9, 1114121, 458752, 9, 1114122, 458752, 9, 1114123, 458752, 9, 1114124, 458752, 9, 1114125, 458752, 9, 1114126, 458752, 9, 1114127, 458752, 9, 1114128, 458752, 9, 1114129, 458752, 9, 1114130, 458752, 9, 1114131, 458752, 9, 1114132, 458752, 9, 1114133, 458752, 9, 1114134, 458752, 9, 1114135, 458752, 9, 1114136, 458752, 9, 1114137, 458752, 9, 1114138, 458752, 9, 1179653, 458752, 9, 1179654, 458752, 9, 1179655, 458752, 9, 1179656, 458752, 9, 1179657, 458752, 9, 1179658, 458752, 9, 1179659, 458752, 9, 1179660, 458752, 9, 1179661, 458752, 9, 1179662, 458752, 9, 1179663, 458752, 9, 1179664, 458752, 9, 1179665, 458752, 9, 1179666, 458752, 9, 1179667, 458752, 9, 1179668, 458752, 9, 1179669, 458752, 9, 1179670, 458752, 9, 1179671, 458752, 9, 1179672, 458752, 9, 1179673, 458752, 9, 1179674, 458752, 9, 1245189, 458752, 10, 1245190, 458752, 10, 1245191, 458752, 10, 1245192, 458752, 10, 1245193, 458752, 10, 1245194, 458752, 10, 1245195, 458752, 10, 1245196, 458752, 10, 1245197, 458752, 10, 1245198, 458752, 10, 1245199, 458752, 10, 1245200, 458752, 10, 1245201, 458752, 10, 1245202, 458752, 10, 1245203, 458752, 10, 1245204, 458752, 10, 1245205, 458752, 10, 1245206, 458752, 10, 1245207, 458752, 10, 1245208, 458752, 10, 1245209, 458752, 10, 1245210, 458752, 10, 917535, 1179648, 1, 917536, 1179648, 1, 917541, 1179648, 1, 917542, 1179648, 1, 917543, 1179648, 1, 917548, 1179648, 1, 917549, 1179648, 1, 917550, 1179648, 1, 917534, 1114112, 1, 917537, 1245184, 1, 917540, 1114112, 1, 917544, 1245184, 1, 917547, 1114112, 1, 917551, 1245184, 1, 917560, 458752, 8, 917559, 458752, 8, 917558, 458752, 8, 917557, 458752, 8, 917556, 458752, 8, 917555, 458752, 8, 917554, 393216, 8, 917561, 524288, 8, 983091, 458752, 9, 983092, 458752, 9, 983093, 458752, 9, 983094, 458752, 9, 983095, 458752, 9, 983096, 458752, 9, 1048627, 458752, 9, 1048628, 458752, 9, 1048629, 458752, 9, 1048630, 458752, 9, 1048631, 458752, 9, 1048632, 458752, 9, 1114163, 458752, 9, 1114164, 458752, 9, 1114165, 458752, 9, 1114166, 458752, 9, 1114167, 458752, 9, 1114168, 458752, 9, 1179699, 458752, 9, 1179700, 458752, 9, 1179701, 458752, 9, 1179702, 458752, 9, 1179703, 458752, 9, 1179704, 458752, 9, 983090, 393216, 9, 1048626, 393216, 9, 1114162, 393216, 9, 1179698, 393216, 9, 983097, 524288, 9, 1048633, 524288, 9, 1114169, 524288, 9, 1179705, 524288, 9, 1245235, 458752, 10, 1245236, 458752, 10, 1245237, 458752, 10, 1245238, 458752, 10, 1245239, 458752, 10, 1245240, 458752, 10, 1245234, 393216, 10, 1245241, 524288, 10, 327763, 1179648, 8, 327762, 1179648, 8, 327761, 1179648, 8, 327760, 1179648, 8, 327759, 1179648, 8, 327758, 1179648, 8, 327757, 1179648, 8, 327756, 1179648, 8, 327755, 1179648, 8, 327754, 1179648, 8, 327753, 1179648, 8, 327752, 1179648, 8, 327751, 1179648, 8, 327750, 1179648, 8, 327749, 1179648, 8, 327748, 1179648, 8, 327747, 1179648, 8, 327746, 1179648, 8, 327745, 1179648, 8, 327744, 1179648, 8, 327743, 1179648, 8, 327742, 1179648, 8, 327741, 1179648, 8, 327740, 1114112, 8, 327764, 1245184, 8, 851972, 393216, 8, 917508, 393216, 9, 983044, 393216, 9, 1048580, 393216, 9, 1114116, 393216, 9, 1179652, 393216, 9, 1245188, 393216, 10, 851995, 524288, 8, 917531, 524288, 9, 983067, 524288, 9, 1048603, 524288, 9, 1114139, 524288, 9, 1179675, 524288, 9, 1245211, 524288, 10)

[node name="Background" parent="." instance=ExtResource("2_lvgsd")]

[node name="StartArea" parent="." instance=ExtResource("9_yx5ex")]
position = Vector2(97, 209)

[node name="Exit" parent="." instance=ExtResource("10_7gdqb")]
position = Vector2(1341, 49)

[node name="ClearMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_rc3em")
volume_db = -15.928

[connection signal="body_entered" from="Deathzone" to="." method="_on_deathzone_body_entered"]
[connection signal="touched_player" from="Traps/Saw" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/Saw2" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/Saw3" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/SpikeBall" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/SpikeBall2" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/SpikeBall3" to="." method="_on_trap_touched_player"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
